--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,10 @@
     --dark-blue: #363f5f;
     --green: #49AA26;
     --light-green: #3dd705;
+    --income: #42AA26;
     --red: #e92929;
+    --background: #f0f2f5; /*/#141316 #130f0d*/
+    --white: #FFF;
 }
 
 * {
@@ -17,7 +20,7 @@ html {
 }
 
 body {
-    background: #f0f2f5;
+    background: var(--background);
     font-family: 'Poppins', sans-serif;
 }
 
@@ -48,7 +51,7 @@ h2 {
 
 /* Links and buttons */
 a {
-    color: #42AA26;
+    color: var(--income);
     text-decoration: none;
 }
 
@@ -60,7 +63,7 @@ button {
     width: 100%;
     height: 50px;
     border: none;
-    color: white;
+    color: var(--white);
     background-color: var(--green);
     padding: 0;
     cursor: pointer;
@@ -120,7 +123,7 @@ header h1 span {
 
 /* Cards */
 .card {
-    background-color: white;
+    background-color: var(--white);
     padding: 1.5rem 2rem;
     border-radius: 0.25rem;
     margin-bottom: 2rem;
@@ -140,9 +143,13 @@ header h1 span {
     margin-top: 1rem;
 }
 
+.ptotal {
+    color: #bb2b2b;
+}
+
 .card.total {
     background-color: var(--green);
-    color: white;
+    color: var(--white);
 } 
 
 /* Table */
@@ -168,7 +175,7 @@ table tbody td:last-child {
 }
 
 table thead th {
-    background-color: white;
+    background-color: var(--white);
     font-weight: normal;
     padding:  1rem 2.5rem;
     text-align: left;
@@ -183,7 +190,7 @@ table thead th:last-child {
 }
 
 table tbody td {
-    background-color: white;
+    background-color: var(--white);
     padding: 1rem 2rem;
 }
 
@@ -200,11 +207,11 @@ td.description {
 }
 
 td.income {
-    color: #12a454;
+    color: var(--income);
 }
 
 td.expense {
-    color: #e92929;
+    color: var(--red);
 }
 
 /* Modal */
@@ -227,7 +234,7 @@ td.expense {
 }
 
 .modal {
-    background-color: #f0f2f5;
+    background-color: var(--background);
     padding: 2.4rem;
     position: relative;
     border-radius: 0.5rem;
@@ -249,6 +256,11 @@ input {
     border-radius: 0.3rem;
     padding: 0.8rem;
     width: 100%;
+   outline: none;
+}
+
+input:focus {
+    border: 1px solid #2D4A22;
 }
 
 .input-group {
