--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,7 @@
     --light-green: #3dd705;
     --income: #42AA26;
     --red: #e92929;
-    --background: #f0f2f5; /*/#141316 #130f0d*/
+    --background: #f0f2f5; /*#141316 #130f0d*/
     --white: #FFF;
 }
 
