--- a/src/views/index.html
+++ b/src/views/index.html
@@ -59,9 +59,7 @@
                         <th></th>
                     </tr>
                 </thead>
-                <tbody>
-
-                </tbody>
+                <tbody></tbody>
             </table>
         </section>
     </main>
