adding animations on footer

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -110,7 +110,7 @@
         </div>
     </div>
 
-    <footer class="footer">
+    <footer class="footer animate-up">
         <p>My.Finances$</p>
     </footer>
 
