adding dark mode to the project
adding dark mode and saving in on local storage

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -16,6 +16,10 @@
 <body>
     <header>
         <h1 id="logo">My<span>.</span>Finances<span>$</span></h1>
+        <div class="toggle" id="dark-mode-toggle">
+            <input id="switch" type="checkbox" name="theme">
+            <label class="label" for="switch">Toggle</label>
+        </div>
     </header>
 
     <main class="container animate-appear">
