--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,12 +1,22 @@
 /* Global */
-:root {
-    --dark-blue: #363f5f;
+html {
+    --dark-blue: #363f5f; /*#363f5f #fff*/
     --green: #49AA26;
     --light-green: #3dd705;
     --income: #42AA26;
     --red: #e92929;
-    --background: #f0f2f5; /*#141316 #130f0d*/
-    --white: #FFF;
+    --background: #f0f2f5; /*#f0f2f5 #130f0d*/
+    --white: #FFF; /*#FFF #141316*/
+    --header: #2D4A22; /*#2D4A22 #0e2407*/
+}
+
+/* dark mode */
+.darkmode {
+    --dark-blue: #fff;
+    --background: #130f0d; 
+    --white: #141316; 
+    --header: #0e2407; 
+    
 }
 
 * {
@@ -16,7 +26,7 @@
 }
 
 html {
-    font-size: 93.75%; /* 15 px */
+    font-size: 93.75%; 
 }
 
 body {
@@ -96,7 +106,7 @@ button:hover {
 
 /* Header */
 header{
-    background-color: #2D4A22;
+    background-color: var(--header);
     padding: 2rem 0 10rem;
     text-align: center;
 }
@@ -111,6 +121,53 @@ header h1 span {
     font-weight: 400;
 }
 
+/* botão que liga ou desliga o dark mode */
+input[type=checkbox]{
+    height: 0;
+    width: 0;
+    visibility: hidden;
+}
+
+label {
+    margin: -4rem 2rem;
+    cursor: pointer;
+    text-indent: -9999px;
+    width: 52px;
+    height: 27px;
+    background: var(--green);
+    float: right;
+    border-radius: 100px;
+    position: relative;
+}
+
+.dark {
+    background: #141316;
+}
+
+label::after{
+    content: '';
+    position: absolute;
+    top: 3px;
+    left: 3px;
+    width: 20px;
+    height: 20px;
+    background-color: white;
+    border-radius: 90px;
+    transition: 0.3s;
+}
+
+input:checked + label {
+    background-color: #141316;
+}
+
+input:checked + label::after {
+    left: calc(100% - 5px);
+    transform: translateX(-100%);
+}
+
+label:active:after {
+    width: 45px;
+}
 
 /* Balance */
 #balance {
@@ -149,7 +206,7 @@ header h1 span {
 
 .card.total {
     background-color: var(--green);
-    color: var(--white);
+    color: white;
 } 
 
 /* Table */
@@ -161,7 +218,7 @@ header h1 span {
 #data-table {
     width: 100%;
     border-spacing: 0 0.5rem;
-    color: #969cb3;
+    color: var(--dark-blue);
 }
 
 table thead tr:first-child, 
@@ -269,6 +326,7 @@ input:focus {
 
 .input-group small.help {
     opacity: 0.5;
+    color: var(--dark-blue);
 }
 
 .input-group.actions {
